--- a/geolife-density-time-grid/www/geolife-spatiotemporal-heatmap/package.json
+++ b/geolife-density-time-grid/www/geolife-spatiotemporal-heatmap/package.json
@@ -11,8 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
