--- a/geolife-density-time-grid/www/geolife-spatiotemporal-heatmap/package.json
+++ b/geolife-density-time-grid/www/geolife-spatiotemporal-heatmap/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^2.0.0",
     "random-normal": "^1.0.0",
     "shuffle-array": "^1.0.1",
+    "vue-plotly": "^1.1.0",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
